# aed3-2019-1c-tp1

./: .gitignore  CMakeLists.txt  main.cpp
tp1/: graficar.py
tp1/experiments_src/: entrada_basica.txt  entrada_basica_output_16.txt  runWithInput.cpp  run_all_experiments.cpp
tp1/scr/: DesitionTreeStrategy.h  Knapback.cpp  Knapback.h  KnapbackDesitionTree.cpp  KnapbackDesitionTree.h  Knapsack.h  Request.h  Solution.h
tp1/scr/backtracking/: Backtracking.cpp  Backtracking.h
tp1/scr/brute_force/: BruteForce.cpp  BruteForce.h  DesitionTreeStrategy.h  Knapback.cpp  Knapback.h  KnapsackDesitionTree.cpp  KnapsackDesitionTree.h  Request.h
tp1/scr/dynamic_programming/: DynamicProgrammingAlgorithm.cpp  DynamicProgrammingAlgorithm.h
tp1/scr/meet_in_the_middle/: MeetInTheMiddle.cpp  MeetInTheMiddle.h  Solution.h
tp1/test/: BacktrackingTest.cpp  DynamicProgrammingAlgorithmTest.cpp  KnapbackTest.cpp  MeetInTheMiddleTest.cpp  knapbackTest.cpp
